rnsc/test_data/integration/error/parser/instructions/ldc_directive.rns
.class LdcDirective
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc .class
    return
  .code_end
.method_end
.class_end
